[package]
name = "twget"
version = "0.1.0"
edition = "2021"
description = "Twitter/X CLI for fetching tweets without an API key"

[dependencies]
agent-twitter-client = "0.1.2"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
